# com-chat

./: Cargo.toml  LICENSE  README.md  REQ.md
.github/workflows/: ci-release.yml
docs/: DEVELOPER_GUIDE.md
src/: cli.rs  error.rs  main.rs
src/core/: batch.rs  connections.rs  mod.rs
src/serial/: mod.rs
src/storage/: config.rs  history.rs  logging.rs  mod.rs
src/ui/: app.rs  input.rs  mod.rs  view.rs
