[package]
name = "COMchat"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.60", features = ["derive"] }
crossterm = "0.29.0"
dirs-next = "2.0.0"
ratatui = "0.30.0"
serde = "1.0.228"
serde_derive = "1.0.228"
serialport = "4.8.1"
thiserror = "2.0.18"
toml = "1.0.4"
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
